.provarCaches/00D410000011HE0EAM/objects/rstkf__arinterco__c.object
<CustomObject>
    <description>arinterco__c</description>
    <fields>
        <fullName>rstkf__arinterco_arco__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company Allowing Cash Rcpts Comp to Bank</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Accounts Receivable Inter-Companys (Company Allowing Cash Rcpts Comp to Bank)</relationshipLabel>
        <relationshipName>arintercos01</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arinterco_aroffset__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Offset to AR Account in AR Company</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Accounts Receivable Inter-Companys (Offset to A/R Account in A/R Company)</relationshipLabel>
        <relationshipName>arintercos01</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arinterco_billingco_cr_memo_ar__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Billing Company Intercompany AR</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Accounts Receivable Inter-Companys (Billing Company Intercompany A/R)</relationshipLabel>
        <relationshipName>arintercos03</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arinterco_cashoffset__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Offset to Cash Acct in Cash Receipt Comp</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Accounts Receivable Inter-Companys</relationshipLabel>
        <relationshipName>arintercos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arinterco_rectco__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company Allowed to Receive Interco Cash</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Accounts Receivable Inter-Companys</relationshipLabel>
        <relationshipName>arintercos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arinterco_rectco_cr_memo_ar__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Cash Receipts Company Intercompany AR</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Accounts Receivable Inter-Companys (Cash Receipts Company Intercompany A/R)</relationshipLabel>
        <relationshipName>arintercos02</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__arinterco_rectco__r.rstkf__externalid__c &amp; &apos;_&apos; &amp; rstkf__arinterco_arco__r.rstkf__externalid__c</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__arinterco_rectco__r.rstkf__glcmp_cmpno__r.rstk__sycmp_cmpno__c &amp; &apos;-&apos; &amp;  rstkf__arinterco_arco__r.rstkf__glcmp_cmpno__r.rstk__sycmp_cmpno__c</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Accounts Receivable Inter-Company</label>
    <listViews>
        <fullName>rstkf__RS_Accounts_Receivable_Inter_Companys</fullName>
        <columns>NAME</columns>
        <columns>rstkf__arinterco_billingco_cr_memo_ar__c</columns>
        <columns>rstkf__arinterco_rectco_cr_memo_ar__c</columns>
        <columns>rstkf__arinterco_rectco__c</columns>
        <columns>rstkf__arinterco_arco__c</columns>
        <columns>rstkf__arinterco_aroffset__c</columns>
        <columns>rstkf__arinterco_cashoffset__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Accounts Receivable Inter-Companys</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounts Receivable Inter-Companys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>